err/uni2esky.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/encodingutils'...
Compiling './lib/python3.5/site-packages/encodingutils/codepages.py'...
***   File "./lib/python3.5/site-packages/encodingutils/codepages.py", line 51
    + enc.enc(f' = {i}')
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/encodingutils/udat2dictkeys.py'...
***   File "./lib/python3.5/site-packages/encodingutils/udat2dictkeys.py", line 48
    ret += f'    0x{unicode.upper()}: (0x{page_str}, {position}), # {chr(codepoint)}\n'
                                                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/strescpos'...
Listing './lib/python3.5/site-packages/uni2esky'...
Listing './lib/python3.5/site-packages/uni2esky-1.0.9.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
